--- a/app/partials/schedules/exams.jade
+++ b/app/partials/schedules/exams.jade
@@ -32,7 +32,11 @@ div.tests-and-exams(ng-controller='SchedulesExamsCtrl')
                             span.time {{test.time.start | minutesToHours}}
                             span.name {{test.subject.name}}
                             span.teacher {{test.professor[0].name}}
+                            span.consult(ng-if="test.type == 'consult'") консультация
                             span.audit {{test.place[0].name}}
+                        span.editing
+                            a(ng-click="changeEvent(test, this[part.type])") Изм.
+                            a(ng-click="cancelEvent(test, this[part.type])") Уд.
 
                 .lesson-details-container.height-transition(ng-if="$routeParams.weekDay == test.dow && $routeParams.classNum == test.number && $routeParams.atomClass == test.index")
                     div(ng-include, src="'app/partials/schedules/class/session-index.jade'")
