--- a/app/styles/schedules/exams.styl
+++ b/app/styles/schedules/exams.styl
@@ -56,11 +56,23 @@
           .teacher
             font-weight 300
             color lighten($brand-primary, 70%)
+            margin-right 15px
 
           .audit
             color $brand-info
-            padding-left 15px
+            margin-right 15px
             font-weight 500
+
+          .consult
+            display inline-block
+            font-size $font-size-base
+            padding 3px 8px
+            background $brand-info
+            color #fff
+            margin-right 10px
+
+        .editing
+          display none
 
 
 @media $media-min-tablet
@@ -119,3 +131,15 @@
             color $brand-info
             padding-left 15px
             font-weight 500
+
+          .consult
+            margin-left 15px
+            font-size $font-size-base
+            padding 3px 8px
+            background $brand-info
+            color #fff
+
+        .editing
+          margin-left 10px
+          a
+            margin-left 10px
