--- a/app/partials/schedules/studies.jade
+++ b/app/partials/schedules/studies.jade
@@ -43,6 +43,7 @@ div(ng-controller='SchedulesStudiesCtrl')
                                     .lesson-atom-cell(ng-repeat="atom in sched[dow][class]",
                                     class="lesson-parity-{{ atom.parity }} lesson-half-{{ atom.half_group }}",
                                     ng-click="columnIndex = $index; showDetails(dow, class, $index)")
+                                        i.stico-lection(ng-if="atom.type == 'lecture'")
                                         span.lesson-name {{atom.subject.name}}
                                         span.lesson-place(ng-repeat="p in atom.place") {{ p.name }}
                         .lesson-details-container.height-transition(ng-if="$routeParams.classNum == class && in($routeParams.weekDay, line)")
@@ -75,6 +76,7 @@ div(ng-controller='SchedulesStudiesCtrl')
                             ng-repeat="atom in sched[dow][class]",
                             class="lesson-parity-{{ atom.parity }} lesson-half-{{ atom.half_group }}",
                             ng-click="columnIndex = $index; showDetails(dow, class, $index)")
+                                i.stico-lection(ng-if="atom.type == 'lecture'")
                                 span.lesson-name {{atom.subject.name}}
                                 span.lesson-place(ng-repeat="p in atom.place") {{ p.name }}
                         .lesson-details-container.height-transition(ng-if="$routeParams.classNum == class && $routeParams.weekDay == dow")
