--- a/app/styles/schedules/studies.styl
+++ b/app/styles/schedules/studies.styl
@@ -76,6 +76,11 @@
             border-right 1px solid $sched-border-color
             padding 0 12px
             overflow hidden
+            white-space nowrap
+
+            .stico-lection
+              margin-left -5px
+              margin-right 5px
 
             &:hover
               background $sched-cell-hover-bg
@@ -203,6 +208,9 @@
             .lesson-place
               color #3baba1
               margin-left 10px
+            .stico-lection
+              margin-left -5px
+              margin-right 5px
           .lesson-parity-0
             line-height 64px
           .lesson-parity-1
