--- a/app/styles/schedules/navigation.styl
+++ b/app/styles/schedules/navigation.styl
@@ -139,6 +139,7 @@
             margin 0 0 0 5px
           .stico-arrow-right
             vertical-align middle
+            margin-top: -3px;
 
         .group-name
           font-weight 500
