--- a/app/styles/common/header.styl
+++ b/app/styles/common/header.styl
@@ -14,7 +14,10 @@ header
       div
         float left
         vertical-align inherit
+        margin-left -25px
       span
+        display inline-block
+        margin-top -4px
         margin-left 10px
         line-height $navbar-height
 
