--- a/app/styles/common/header.styl
+++ b/app/styles/common/header.styl
@@ -60,6 +60,8 @@ header
         padding-right 10px
         span
           display none
+        div
+          margin-left 0px
 
       ul.nav
         margin 0
