--- a/app/styles/schedules/details.styl
+++ b/app/styles/schedules/details.styl
@@ -346,7 +346,7 @@
               font-weight 200
               opacity 0.3
           .file-descr
-            font-size $font-size-medium
+            font-size $font-size-base
             font-weight 300
             color lighten($brand-primary, 40%)
             letter-spacing 1px
