any hover interaction removed from touch screens

--- a/app/styles/schedules/exams.styl
+++ b/app/styles/schedules/exams.styl
@@ -50,6 +50,7 @@
           .name
             display block
             font-weight 400
+            text-decoration none !important
             &:hover
               text-decoration underline
 
@@ -105,6 +106,7 @@
 
         a
           padding 9px 0
+          text-decoration none
 
           .date
             font-size $font-size-large
@@ -119,6 +121,7 @@
           .name
             font-weight 400
             padding-left 15px
+            text-decoration none !important
             &:hover
               text-decoration underline
 
