--- a/app/styles/schedules/navigation.styl
+++ b/app/styles/schedules/navigation.styl
@@ -152,7 +152,8 @@
           line-height ($sched-nav-mobile-height - ($font-size-large - $font-size-medium))
           margin-right -5px
           a
-            padding 15px 0
+            padding: 8px
+            margin-right: -8px
             &.active
               display none
 
