--- a/app/index.jade
+++ b/app/index.jade
@@ -20,7 +20,7 @@ html(ng-app="app")
       script(src='//html5shiv.googlecode.com/svn/trunk/html5.js')
 
     link(href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,600&subset=latin,cyrillic', rel='stylesheet', type='text/css')
-    link(href="/css/app.css", rel='stylesheet', type='text/css')
+    link(rel="stylesheet", href="/css/app.css")
     script.
       window.brunch = window.brunch || {};
       window.brunch['auto-reload'] = {
@@ -29,7 +29,6 @@ html(ng-app="app")
   body
     include partials/header
     #wrap.ngc-view.ng-cloak
-    .expander
     include partials/footer
 
     //script(type='text/javascript', src="phonegap.js")
