--- a/app/partials/schedules/studies.jade
+++ b/app/partials/schedules/studies.jade
@@ -1,29 +1,8 @@
 div(ng-controller='SchedulesStudiesCtrl')
     #schedule-greed(breakpoint="min-width: 768px", class="week-{{currentParity}}", ng-init="classes=['1','2','3','4','5','6']")
         // Three columns
-        div(ng-if="matches", class="desktop", ng-init="lines=[['Mon', 'Tue', 'Wed'], ['Thu', 'Fri', 'Sat']]", bindonce)
-            // Navigation
-            div(move-content-to="sched-nav-left")
-                .type-changer
-                    a.active Семестр
-                    a(ng-click="showScheduleType('exams')") Сессия
-            div(move-content-to="sched-nav-right")
-                .col-sm-4.text-right(ng-if="!in_feature")
-                    .next-week-btn(bindonce)
-                        a(ng-click="nextWeek()")
-                            span(bo-html="'schedules.index.next_week' | translate")
-                            i.stico-arrow-right
-                .col-sm-4.text-right(ng-if="in_feature")
-                    .next-week-btn(bindonce)
-                        a(ng-click="prevWeek()")
-                            i.stico-arrow-right.rotate-180
-                            span {{dowDates['Mon'] | date: 'dd MMM'}}
-                        span &#8211;
-                        a(ng-click="nextWeek()")
-                            span {{dowDates['Sat'] | date: 'dd MMM'}}
-                            i.stico-arrow-right
-
-            // Schedule
+        div(ng-if="matches", ng-init="lines=[['Mon', 'Tue', 'Wed'], ['Thu', 'Fri', 'Sat']]", bindonce, class="desktop")
+            div(ng-include, src="'app/partials/schedules/navigation/desktop.jade'")
             div(ng-if="sched")
                 .lessons-grid(ng-repeat="line in lines")
                     .container.row-fluid
@@ -48,18 +27,12 @@ div(ng-controller='SchedulesStudiesCtrl')
                                         span.lesson-place(ng-repeat="p in atom.place") {{ p.name }}
                         .lesson-details-container.height-transition(ng-if="$routeParams.classNum == class && in($routeParams.weekDay, line)")
                             div(ng-include, src="'app/partials/schedules/class/regular-index.jade'")
-
+            div(ng-if="!sched && updated")
+                span Расписания пока нет
 
         // One column
         div(ng-if="!matches", ng-init="lines=['Mon', 'Tue', 'Wed', 'Thu', 'Fri', 'Sat']", bindonce, class="mobile")
-            div(move-content-to="sched-nav-left")
-            div(move-content-to="sched-nav-right")
-                .col-xs-4.text-right
-                    .type-changer
-                        a(ng-click="showScheduleType('exams')")
-                            span Сессия
-
-            // Schedule
+            div(ng-include, src="'app/partials/schedules/navigation/mobile.jade'")
             div(ng-if="sched")
                 .lessons-mobile(ng-repeat="dow in lines")
                     h5.lesson-cell-title(ng-class="{'current': currentDow == dow}")
@@ -67,7 +40,6 @@ div(ng-controller='SchedulesStudiesCtrl')
                         div.lesson-cell-title-date {{ dowDates[dow] | date: 'd MMM' }}
                     .lesson-row(ng-repeat="class in classes")
                         .lesson-cell(ng-class="{'current': currentDow == dow && currentClass == class}")
-                            //.arrow.arrow-up(ng-if="$routeParams.classNum == class && $routeParams.weekDay == dow")
                             .lesson-time-wrapper
                                 .lesson-time(ng-class="{'current': currentDow == dow && currentClass == class}")
                                     h4.lesson-time-number(bo-html="class")
@@ -81,3 +53,5 @@ div(ng-controller='SchedulesStudiesCtrl')
                                 span.lesson-place(ng-repeat="p in atom.place") {{ p.name }}
                         .lesson-details-container.height-transition(ng-if="$routeParams.classNum == class && $routeParams.weekDay == dow")
                             div(ng-include, src="'app/partials/schedules/class/regular-index.jade'")
+            div(ng-if="!sched && updated")
+                span Расписания пока нет
