--- a/app/styles/schedules/exams.styl
+++ b/app/styles/schedules/exams.styl
@@ -140,7 +140,7 @@
             font-size $font-size-base
             padding 3px 8px
             background $brand-info
-            color #fff
+            color #fff !important
 
         .editing
           margin-left 10px
