--- a/app/partials/schedules/navigation/index.jade
+++ b/app/partials/schedules/navigation/index.jade
@@ -23,7 +23,7 @@
                     .col-xs-4
                         a.back-btn(ng-click="showGroups()")
                             i.stico-arrow-right.rotate-180
-                            span Группы
+                            span(bo-html="'schedules.navigation.groups' | translate")
                         #sched-nav-left
                     #sched-nav-center
                     #sched-nav-right
