--- a/app/styles/schedules/exams.styl
+++ b/app/styles/schedules/exams.styl
@@ -69,7 +69,7 @@
             font-size $font-size-base
             padding 3px 8px
             background $brand-info
-            color #fff
+            color #fff !important
             margin-right 10px
 
         .editing
