--- a/app/partials/schedules/navigation/desktop.jade
+++ b/app/partials/schedules/navigation/desktop.jade
@@ -1,12 +1,12 @@
 div(move-content-to="sched-nav-left")
-    .type-changer(ng-if="exams > 0 || exam_parts")
-        a(ng-class="{'active': !exam_parts}", ng-click="showScheduleType('studies')") Семестр
-        a(ng-class="{'active': exam_parts}", ng-click="showScheduleType('exams')") Сессия
+    .type-changer(ng-if="exams > 0 || exam_parts", bindonce)
+        a(ng-class="{'active': !exam_parts}", ng-click="showScheduleType('studies')", bo-html="'schedules.navigation.semestr' | translate")
+        a(ng-class="{'active': exam_parts}", ng-click="showScheduleType('exams')", bo-html="'schedules.navigation.session' | translate")
 div(move-content-to="sched-nav-center")
     .col-sm-4.text-center(bindonce)
         span.schedule-updated-text
-            span(ng-if="updated", bo-html="'Обновлено ' + '{{ updated | relativeDate}}'")
-            span(ng-if="!updated") Загрузка...
+            span(ng-if="updated", bo-html="'{{'schedules.navigation.updated' | translate}} ' + '{{ updated | relativeDate}}'")
+            span(ng-if="!updated", bo-html="'schedules.navigation.updating' | translate")
 div(move-content-to="sched-nav-right")
     div(ng-if="!exam_parts")
         .col-sm-4.text-right(ng-if="!in_feature")
