--- a/app/styles/schedules/navigation.styl
+++ b/app/styles/schedules/navigation.styl
@@ -94,7 +94,7 @@
           font-size $font-size-medium
           font-weight 200
           white-space nowrap
-          margin-right -20px
+          margin-right -10px
           line-height $sched-nav-height
 
           a
@@ -134,7 +134,7 @@
           font-size $font-size-medium
           padding 15px 0
           line-height ($sched-nav-mobile-height - ($font-size-large - $font-size-medium))
-          margin-left -5px
+          margin-left -10px
           span
             margin 0 0 0 5px
           .stico-arrow-right
@@ -152,7 +152,7 @@
           line-height ($sched-nav-mobile-height - ($font-size-large - $font-size-medium))
           margin-right -5px
           a
-            padding: 8px
+            padding: 15px 8px
             margin-right: -8px
             &.active
               display none
