--- a/app/partials/schedules/studies.jade
+++ b/app/partials/schedules/studies.jade
@@ -5,26 +5,28 @@ div(ng-controller='SchedulesStudiesCtrl')
             div(ng-include, src="'app/partials/schedules/navigation/desktop.jade'")
             div(ng-if="sched")
                 .lessons-grid(ng-repeat="line in lines")
-                    .container.row-fluid
-                        .col-sm-4(ng-repeat="dow in line")
-                            h5.lesson-cell-title(ng-class="{'current': currentDow == dow}")
-                                span.lesson-cell-title-day(bo-html="'schedules.studies.'+dow | translate")
-                                div.lesson-cell-title-date {{ dowDates[dow] | date: 'd MMM' }}
+                    .container
+                        .row
+                            .col-sm-4(ng-repeat="dow in line")
+                                h5.lesson-cell-title(ng-class="{'current': currentDow == dow}")
+                                    span.lesson-cell-title-day(bo-html="'schedules.studies.'+dow | translate")
+                                    div.lesson-cell-title-date {{ dowDates[dow] | date: 'd MMM' }}
                     .lessons-row(ng-repeat="class in classes")
-                        .container.row-fluid
-                            .lesson-time-wrapper
-                                .lesson-time(ng-class="{'current': currentClass == class && in(currentDow, line)}")
-                                    h4.lesson-time-number(bo-html="class")
-                                    h5.lesson-time-start(bo-html="timing[class].start | minutesToHours")
-                            .lesson-cell-wrapper.col-sm-4(ng-repeat="dow in line")
-                                .lesson-cell(ng-class="{'current': currentDow == dow && currentClass == class}")
-                                    .arrow.arrow-up(ng-if="$routeParams.classNum == class && $routeParams.weekDay == dow")
-                                    .lesson-atom-cell(ng-repeat="atom in sched[dow][class]",
-                                    class="lesson-parity-{{ atom.parity }} lesson-half-{{ atom.half_group }}",
-                                    ng-click="columnIndex = $index; showDetails(dow, class, $index)")
-                                        i.stico-lection(ng-if="atom.type == 'lecture'")
-                                        span.lesson-name {{atom.subject.name}}
-                                        span.lesson-place(ng-repeat="p in atom.place") {{ p.name }}
+                        .container
+                            .row
+                                .lesson-time-wrapper
+                                    .lesson-time(ng-class="{'current': currentClass == class && in(currentDow, line)}")
+                                        h4.lesson-time-number(bo-html="class")
+                                        h5.lesson-time-start(bo-html="timing[class].start | minutesToHours")
+                                .lesson-cell-wrapper.col-sm-4(ng-repeat="dow in line")
+                                    .lesson-cell(ng-class="{'current': currentDow == dow && currentClass == class}")
+                                        .arrow.arrow-up(ng-if="$routeParams.classNum == class && $routeParams.weekDay == dow")
+                                        .lesson-atom-cell(ng-repeat="atom in sched[dow][class]",
+                                        class="lesson-parity-{{ atom.parity }} lesson-half-{{ atom.half_group }}",
+                                        ng-click="columnIndex = $index; showDetails(dow, class, $index)")
+                                            i.stico-lection(ng-if="atom.type == 'lecture'")
+                                            span.lesson-name {{atom.subject.name}}
+                                            span.lesson-place(ng-repeat="p in atom.place") {{ p.name }}
                         .lesson-details-container.height-transition(ng-if="$routeParams.classNum == class && in($routeParams.weekDay, line)")
                             div(ng-include, src="'app/partials/schedules/class/regular-index.jade'")
             .container(ng-if="!sched && updated")
