--- a/app/partials/schedules/navigation/mobile.jade
+++ b/app/partials/schedules/navigation/mobile.jade
@@ -6,6 +6,6 @@ div(move-content-to="sched-nav-center")
             span(ng-if="!updated", bo-html="'schedules.navigation.updating' | translate")
 div(move-content-to="sched-nav-right")
     .col-xs-4.text-right
-        .type-changer(ng-if="exams > 0 || exam_parts", bindonce)
-            a(ng-if="!exam_parts", ng-click="showScheduleType('exams')", bo-html="'schedules.navigation.session' | translate")
-            a(ng-if="exam_parts", ng-click="showScheduleType('studies')", bo-html="'schedules.navigation.semestr' | translate")
+        .type-changer(ng-if="exams > 0", bindonce)
+            a(ng-if="showingState == 'studies'", ng-click="showScheduleType('exams')", bo-html="'schedules.navigation.session' | translate")
+            a(ng-if="showingState == 'exams'", ng-click="showScheduleType('studies')", bo-html="'schedules.navigation.semestr' | translate")
