places schedule implementation started (70%)

--- a/app/partials/places/index.jade
+++ b/app/partials/places/index.jade
@@ -1,6 +1,3 @@
 .overthrow.non-bounce
     .animated-view
-        .schedule-header
-            .container
-                span.under-dev В разработке
-            //div(ng-include, src="'app/partials/places/schedule.jade'")
+        div(ng-include, src="'app/partials/places/schedule.jade'")
